--- a/angular-8-jwt-authentication/src/styles.css
+++ b/angular-8-jwt-authentication/src/styles.css
@@ -1,1 +1,158 @@
-/* You can add global styles to this file, and also import other style files */
+/* You can add global styles to this file, and also import other style files */html, body {
+	 height: 100%;
+    }
+     body {
+         background-color: #f8f8f8;
+         font-size: 14px;
+         font-family: "Poppins", sans-serif;
+         line-height: 1.7;
+         width: 100%;
+         height: 100%;
+    }
+     .h1, h1 {
+         font-family: "Poppins", sans-serif;
+         font-weight: 800;
+    }
+     .h3, h3 {
+         font-family: "Poppins", sans-serif;
+         line-height: 50px;
+         font-size: 25px;
+         font-weight: 900;
+         color: #465e6a;
+    }
+     .h4, h4 {
+         font-family: "Poppins", sans-serif;
+         font-size: 16px;
+         font-weight: 600;
+         color: #465e6a;
+    }
+     h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
+         line-height: normal;
+    }
+     p {
+         font-family: "Poppins", sans-serif;
+         line-height: 28px;
+         letter-spacing: 1px;
+    }
+     img {
+         max-width: 100%;
+    }
+     *:active, *:focus {
+         outline: none !important;
+         background-image: none;
+         -webkit-box-shadow: none;
+         box-shadow: none;
+    }
+     @media (max-width: 992px) {
+         .container {
+             max-width: 90%;
+        }
+    }
+     @media (max-width: 767px) {
+         .container {
+             max-width: 100%;
+        }
+    }
+    /**************************** CART ****************************/
+     app-cart .card-content {
+         text-align: right;
+    }
+     .btn-outline-primary {
+         background-color: transparent;
+         color: #333 !important;
+         border: 0px !important;
+    }
+     .btn-outline-primary:hover {
+         background-color: transparent;
+         color: #333;
+    }
+     .btn-outline-primary:not(:disabled):not(.disabled).active, .btn-outline-primary:not(:disabled):not(.disabled):active, .show > .btn-outline-primary.dropdown-toggle, .btn-outline-primary.focus, .btn-outline-primary:focus {
+         background-color: transparent !important;
+         border: 0px !important;
+         box-shadow: 0 0 0 0rem rgba(0, 123, 255, 0) !important;
+         outline: 0 !important;
+    }
+     @media (max-width: 767px) {
+         .box-cart .dropdown {
+             position: absolute;
+             right: 0;
+        }
+    }
+     .dropdown-menu {
+         border-radius: 0.15rem;
+         font-size: 13px;
+         min-width: 350px;
+         padding: 30px 30px 30px 30px;
+         box-shadow: 0 0 6px rgba(0, 0, 0, 0.2);
+         overflow: auto;
+         max-height: 600px;
+    }
+     @media (max-width: 767px) {
+         .dropdown-menu {
+             max-height: 500px;
+        }
+    }
+     @media (max-width: 375px) {
+         .dropdown-menu {
+             min-width: 300px;
+        }
+    }
+     .dropdown-menu .box-cart-prod {
+         border-bottom: 0px solid #dbdbdb;
+         margin: 0 3px;
+         padding-bottom: 5px;
+    }
+     .dropdown-menu .box-cart-prod .dropdown-item {
+         padding: 0.25rem 0rem;
+    }
+     .dropdown-menu .box-cart-prod .dropdown-item:hover {
+         background: transparent;
+    }
+     .dropdown-menu .box-cart-prod .dropdown-item span {
+         font-weight: 600;
+         font-size: 14px;
+    }
+     .dropdown-menu .box-cart-prod:hover {
+         background: transparent;
+    }
+     .dropdown-menu .box-cart-prod .cart-box-img {
+         padding: 0;
+         border: 0px solid #e3e3e3;
+    }
+     .dropdown-menu .btn-checkout {
+         width: 100%;
+         margin-top: 10px;
+         border-radius: 25px;
+         background-color: #222;
+         border-color: #222;
+         font-weight: 600;
+         text-align: center;
+         text-transform: uppercase;
+         padding: 10px;
+         cursor: pointer;
+    }
+     .dropdown-menu .btn-checkout a {
+         color: #fff;
+         text-decoration: none;
+    }
+     .dropdown-menu .btn-checkout a .cart-total-price {
+         float: right;
+    }
+     .dropdown-menu .btn-checkout a:hover {
+         color: #fff;
+    }
+     .dropdown-menu .box-total {
+         margin-top: 20px;
+         text-transform: uppercase;
+         font-weight: 500;
+         color: #212121;
+    }
+     .dropdown-menu .box-total p {
+         font-size: 14px;
+         padding-left: 5px;
+    }
+     .dropdown-menu .disable-cart p {
+         text-align: center;
+         font-weight: 500;
+    }
+     
