--- a/angular-8-jwt-authentication/src/app/app.component.html
+++ b/angular-8-jwt-authentication/src/app/app.component.html
@@ -1,6 +1,6 @@
-<div id="app">
-  <nav class="navbar navbar-expand navbar-dark bg-dark">
-    <a href="#" class="navbar-brand">bezKoder</a>
+<div id="app" >
+  <nav class="navbar navbar-expand">
+    <app-nav></app-nav>
     <ul class="navbar-nav mr-auto" routerLinkActive="active">
       <li class="nav-item">
         <a href="/home" class="nav-link" routerLink="home">Home </a>
@@ -10,9 +10,6 @@
       </li>
       <li class="nav-item" *ngIf="showModeratorBoard">
         <a href="/mod" class="nav-link" routerLink="mod">Moderator Board</a>
-      </li>
-      <li class="nav-item">
-        <a href="/user" class="nav-link" *ngIf="isLoggedIn" routerLink="user">User</a>
       </li>
     </ul>
 
@@ -34,8 +31,8 @@
       </li>
     </ul>
   </nav>
-
-  <div class="container">
+    
     <router-outlet></router-outlet>
-  </div>
+  
+  <!--<app-footer></app-footer>-->
 </div>
